--- a/src/css/pages.css
+++ b/src/css/pages.css
@@ -11032,11 +11032,11 @@ h3:first-child {
     flex: 1;
   }
 }
-.f14wfpb5[class][class] {
+.filter-btn[class][class] {
   display: none;
 }
 @media (min-width: 744px) {
-  .f14wfpb5[class][class] {
+  .filter-btn[class][class] {
     --chipsbar_separator-height: 32px;
     display: grid;
     flex: 0 0 auto;
@@ -11045,7 +11045,7 @@ h3:first-child {
     position: relative;
   }
   @supports (flex-basis: fit-content) {
-    .f14wfpb5[class][class] {
+    .filter-btn[class][class] {
       flex-basis: fit-content;
     }
   }
@@ -11058,7 +11058,7 @@ h3:first-child {
   pointer-events: none;
   padding-inline-start: var(--contentscroller_peek);
 }
-.bioo66e[class][class] {
+.header-filter__controls-wrapper[class][class] {
   opacity: 0;
   visibility: hidden;
   align-items: center;
@@ -11068,11 +11068,11 @@ h3:first-child {
   position: absolute;
   z-index: 1;
 }
-.dir.bioo66e[class][class] {
+.dir.header-filter__controls-wrapper[class][class] {
   transition: opacity 0.2s, visibility 0.2s, transform 0.2s;
   background: #fff;
 }
-.bioo66e[class][class]::after {
+.header-filter__controls-wrapper[class][class]::after {
   content: '';
   display: block;
   top: 0;
@@ -11083,89 +11083,89 @@ h3:first-child {
   z-index: -1;
 }
 @media (min-width: 744px) {
-  .b1ntzptz[class][class] {
+  .header-filter__controls-visibility[class][class] {
     visibility: revert;
   }
 }
-.b1ntzptz[class][class]:focus-within {
+.header-filter__controls-visibility[class][class]:focus-within {
   opacity: 1;
 }
 @media (min-width: 744px) {
-  .b1ntzptz[class][class] {
+  .header-filter__controls-visibility[class][class] {
     opacity: 1;
   }
 }
-.p1rbh6uo[class][class]:focus-within {
+.header-filter__controls-btn-prev[class][class]:focus-within {
   padding-inline-start: 12px;
 }
-.dir-ltr.p1rbh6uo[class][class]:focus-within {
+.dir-ltr.header-filter__controls-btn-prev[class][class]:focus-within {
   left: 0;
 }
-.dir-ltr.p1rbh6uo[class][class]:focus-within::after {
+.dir-ltr.header-filter__controls-btn-prev[class][class]:focus-within::after {
   left: 100%;
   background-image: linear-gradient(to right, #fff, rgb(255 255 255 / 0));
 }
 @media (min-width: 744px) {
-  .p1rbh6uo[class][class] {
+  .header-filter__controls-btn-prev[class][class] {
     padding-inline-start: 12px;
   }
-  .dir-ltr.p1rbh6uo[class][class] {
+  .dir-ltr.header-filter__controls-btn-prev[class][class] {
     left: 0;
   }
-  .dir-ltr.p1rbh6uo[class][class]::after {
+  .dir-ltr.header-filter__controls-btn-prev[class][class]::after {
     left: 100%;
     background-image: linear-gradient(to right, #fff, rgb(255 255 255 / 0));
   }
 }
-.nzjlmas[class][class]:focus-within {
+.header-filter__controls-btn-next[class][class]:focus-within {
   justify-content: flex-end;
   padding-inline-end: var(--fgg-f-l-a);
 }
-.dir-ltr.nzjlmas[class][class]:focus-within {
+.dir-ltr.header-filter__controls-btn-next[class][class]:focus-within {
   right: -16px;
 }
-.dir-ltr.nzjlmas[class][class]:focus-within::after {
+.dir-ltr.header-filter__controls-btn-next[class][class]:focus-within::after {
   right: 100%;
   background-image: linear-gradient(to left, #fff, rgb(255 255 255 / 0));
 }
 @media (min-width: 744px) {
-  .nzjlmas[class][class] {
+  .header-filter__controls-btn-next[class][class] {
     justify-content: flex-end;
     padding-inline-end: var(--fgg-f-l-a);
   }
-  .dir-ltr.nzjlmas[class][class] {
+  .dir-ltr.header-filter__controls-btn-next[class][class] {
     right: -16px;
   }
-  .dir-ltr.nzjlmas[class][class]::after {
+  .dir-ltr.header-filter__controls-btn-next[class][class]::after {
     right: 100%;
     background-image: linear-gradient(to left, #fff, rgb(255 255 255 / 0));
   }
 }
-.dir-ltr.b168t46a[class][class].p1rbh6uo[class][class]:focus-within {
+.dir-ltr.header-filter__controls-reset[class][class].header-filter__controls-btn-prev[class][class]:focus-within {
   left: 8px;
   padding-left: unset;
 }
 @media (min-width: 744px) {
-  .dir-ltr.b168t46a[class][class].p1rbh6uo[class][class] {
+  .dir-ltr.header-filter__controls-reset[class][class].header-filter__controls-btn-prev[class][class] {
     left: 0;
     padding-left: unset;
   }
-  .dir-ltr.b168t46a[class][class].p1rbh6uo[class][class]:focus-within {
+  .dir-ltr.header-filter__controls-reset[class][class].header-filter__controls-btn-prev[class][class]:focus-within {
     left: 0;
   }
 }
-.dir-ltr.b168t46a[class][class].nzjlmas[class][class]:focus-within {
+.dir-ltr.header-filter__controls-reset[class][class].header-filter__controls-btn-next[class][class]:focus-within {
   right: 2px;
 }
 @media (min-width: 744px) {
-  .dir-ltr.b168t46a[class][class].nzjlmas[class][class] {
+  .dir-ltr.header-filter__controls-reset[class][class].header-filter__controls-btn-next[class][class] {
     right: -12px;
   }
-  .dir-ltr.b168t46a[class][class].nzjlmas[class][class]:focus-within {
+  .dir-ltr.header-filter__controls-reset[class][class].header-filter__controls-btn-next[class][class]:focus-within {
     right: -12px;
   }
 }
-.vmfx3gj[class][class] {
+.header-filter__controls-btn[class][class] {
   appearance: none;
   display: inline-block;
   border: 0;
@@ -11181,7 +11181,7 @@ h3:first-child {
   align-items: center;
   justify-content: center;
 }
-.dir.vmfx3gj[class][class] {
+.dir.header-filter__controls-btn[class][class] {
   border-radius: 50%;
   cursor: pointer;
   border: 1px solid;
@@ -11191,59 +11191,59 @@ h3:first-child {
   background-color: var(--f-mkcy-f);
   transition: box-shadow 0.2s;
 }
-.dir.vmfx3gj[class][class]:focus-visible {
+.dir.header-filter__controls-btn[class][class]:focus-visible {
   transition: box-shadow 0.2s;
   box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.5), 0 0 0 5px rgba(255, 255, 255, 0.7);
 }
-.vmfx3gj[class][class]:disabled {
+.header-filter__controls-btn[class][class]:disabled {
   opacity: 0.5;
   color: graytext;
 }
-.dir.vmfx3gj[class][class]:disabled {
+.dir.header-filter__controls-btn[class][class]:disabled {
   cursor: not-allowed;
 }
 @media (-webkit-max-device-pixel-ratio: 2) {
-  .dir.vmfx3gj[class][class] {
+  .dir.header-filter__controls-btn[class][class] {
     border: 0.5px solid rgb(0 0 0 / 0.3);
   }
 }
-.vmfx3gj[class][class]:focus-visible {
+.header-filter__controls-btn[class][class]:focus-visible {
   outline: 0;
 }
-.dir.vmfx3gj[class][class]:focus-visible {
+.dir.header-filter__controls-btn[class][class]:focus-visible {
   transition: box-shadow 0.2s;
   box-shadow: 0 0 0 1px var(--f-k-smk-x), 0 0 0 4px var(--f-mkcy-f);
 }
-.dir.vmfx3gj[class][class]:focus-visible::-moz-focus-inner {
+.dir.header-filter__controls-btn[class][class]:focus-visible::-moz-focus-inner {
   border: none;
   padding: 0;
   margin: 0;
 }
-.dir.vmfx3gj[class][class]:focus-visible:focus::-moz-focus-inner {
+.dir.header-filter__controls-btn[class][class]:focus-visible:focus::-moz-focus-inner {
   border: none;
 }
-.vmfx3gj[class][class]:focus-visible:-moz-focusring {
+.header-filter__controls-btn[class][class]:focus-visible:-moz-focusring {
   outline: 0;
 }
 @media (prefers-reduced-motion: reduce) {
-  .dir.vmfx3gj[class][class]:focus-visible {
+  .dir.header-filter__controls-btn[class][class]:focus-visible {
     transition: none;
   }
 }
 @media (hover: hover) {
-  .dir.vmfx3gj[class][class]:hover {
+  .dir.header-filter__controls-btn[class][class]:hover {
     box-shadow: var(--cizosd);
     transform: scale(1.04);
   }
 }
-.dir-ltr.c1ssa88v[class][class] {
+.dir-ltr.filter-btn__wrapper[class][class] {
   padding-left: var(--ikx-k-pe);
 }
-.bl3wu21[class][class] {
+.filter-btn__inline-relative[class][class] {
   display: inline-block;
   position: relative;
 }
-.v1tureqs[class][class] {
+.btn-filter[class][class] {
   appearance: none;
   display: inline-block;
   border-radius: 50%;
@@ -11257,7 +11257,7 @@ h3:first-child {
   height: var(--cw-a-a-u-a);
   color: var(--f-k-smk-x);
 }
-.dir.v1tureqs[class][class] {
+.dir.btn-filter[class][class] {
   background-color: transparent;
   cursor: pointer;
   border: var(--filter-button_border, 1px solid var(--j-qkgmf));
@@ -11265,64 +11265,64 @@ h3:first-child {
   margin: 0;
   padding: 7px 0;
 }
-.v1tureqs[class][class]:focus-visible {
+.btn-filter[class][class]:focus-visible {
   outline: 0;
 }
-.dir.v1tureqs[class][class]:focus-visible {
+.dir.btn-filter[class][class]:focus-visible {
   transition: box-shadow 0.2s;
   box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.5), 0 0 0 5px rgba(255, 255, 255, 0.7);
 }
-.dir.v1tureqs[class][class]:focus-visible::-moz-focus-inner {
+.dir.btn-filter[class][class]:focus-visible::-moz-focus-inner {
   border: none;
   padding: 0;
   margin: 0;
 }
-.dir.v1tureqs[class][class]:focus-visible:focus::-moz-focus-inner {
+.dir.btn-filter[class][class]:focus-visible:focus::-moz-focus-inner {
   border: none;
 }
-.v1tureqs[class][class]:focus-visible:-moz-focusring {
+.btn-filter[class][class]:focus-visible:-moz-focusring {
   outline: 0;
 }
 @media (prefers-reduced-motion: reduce) {
-  .dir.v1tureqs[class][class]:focus-visible {
+  .dir.btn-filter[class][class]:focus-visible {
     transition: none;
   }
 }
-.v1tureqs[class][class]:disabled {
+.btn-filter[class][class]:disabled {
   opacity: 0.5;
   color: graytext;
 }
-.dir.v1tureqs[class][class]:disabled {
+.dir.btn-filter[class][class]:disabled {
   cursor: not-allowed;
 }
-.i3c9txn[class][class] {
+.btn-filter-label[class][class] {
   display: grid;
   justify-items: center;
   grid-auto-flow: column;
 }
-.dir.i3c9txn[class][class] {
+.dir.btn-filter-label[class][class] {
   padding-top: var(--d-b-mrdy);
 }
-.cts9zd8[class][class] .i3c9txn[class][class] {
+.filter-btn__wrapper-space-between[class][class] .btn-filter-label[class][class] {
   gap: var(--fgg-f-l-a);
 }
-.dir.cts9zd8[class][class] .i3c9txn[class][class] {
+.dir.filter-btn__wrapper-space-between[class][class] .btn-filter-label[class][class] {
   padding-left: var(--jaa-ni-h);
   padding-right: var(--jaa-ni-h);
 }
-.t1o11edy[class][class] {
+.btn-filter__text[class][class] {
   font-size: var(--f-cv-j-j-p);
   line-height: var(--f-l-h-bac);
   font-weight: var(--jx-zk-pv);
   display: none;
 }
-.cts9zd8[class][class] .t1o11edy[class][class] {
+.filter-btn__wrapper-space-between[class][class] .btn-filter__text[class][class] {
   display: block;
 }
-.dir.cts9zd8[class][class] .t1o11edy[class][class] {
+.dir.filter-btn__wrapper-space-between[class][class] .btn-filter__text[class][class] {
   transform: translateY(-1px);
 }
-.b1qnlf0s[class][class] {
+.btn-filter-count[class][class] {
   display: none;
   pointer-events: none;
   position: absolute;
@@ -11330,7 +11330,7 @@ h3:first-child {
   width: 20px;
   height: 20px;
 }
-.dir.b1qnlf0s[class][class] {
+.dir.btn-filter-count[class][class] {
   background: var(--f-k-smk-x);
   border-radius: 50%;
   border: 1.5px solid var(--f-mkcy-f);
@@ -11338,16 +11338,16 @@ h3:first-child {
   transform: translateY(-1px);
   text-align: center;
 }
-.dir-ltr.b1qnlf0s[class][class] {
+.dir-ltr.btn-filter-count[class][class] {
   right: -4px;
 }
-.n13e4ez0[class][class] {
+.btn-filter-count__text[class][class] {
   font-size: var(--hr-k-udr);
   line-height: var(--dpgw-ac);
   color: var(--f-mkcy-f);
   font-weight: var(--h-oqhch);
 }
-.dir.n13e4ez0[class][class] {
+.dir.btn-filter-count__text[class][class] {
   margin-top: var(--d-b-mrdy);
 }
 .cmrodwo[class][class] {
