--- a/assets/css/pages.css
+++ b/assets/css/pages.css
@@ -7274,7 +7274,7 @@ select[disabled] {
   margin-left: 8px !important;
   border-left: 1px solid #ddd !important;
 }
-._v5aaow {
+.btn-filter-rounded {
   cursor: pointer !important;
   text-align: center !important;
   border: 1px solid #ddd !important;
@@ -7300,18 +7300,18 @@ select[disabled] {
   line-height: 16px !important;
   width: 100% !important;
 }
-._v5aaow:disabled {
+.btn-filter-rounded:disabled {
   cursor: not-allowed !important;
   color: #ddd !important;
   border-color: #ebebeb !important;
 }
 @media (hover: hover) {
-  ._v5aaow:disabled:hover {
+  .btn-filter-rounded:disabled:hover {
     color: #ddd !important;
     border-color: #ebebeb !important;
   }
 }
-._v5aaow:disabled:active {
+.btn-filter-rounded:disabled:active {
   color: #ddd !important;
   border-color: #ebebeb !important;
   -webkit-transform: none !important;
@@ -7319,43 +7319,43 @@ select[disabled] {
   transform: none !important;
 }
 @media (hover: hover) {
-  ._v5aaow:hover {
+  .btn-filter-rounded:hover {
     color: #000 !important;
     border-color: #000 !important;
   }
 }
-._v5aaow:active {
+.btn-filter-rounded:active {
   color: #000 !important;
   border-color: #000 !important;
   -webkit-transform: scale(0.925) !important;
   -ms-transform: scale(0.925) !important;
   transform: scale(0.925) !important;
 }
-._v5aaow::-moz-focus-inner {
+.btn-filter-rounded::-moz-focus-inner {
   border: none !important;
   padding: 0 !important;
   margin: 0 !important;
 }
-._v5aaow:focus::-moz-focus-inner {
+.btn-filter-rounded:focus::-moz-focus-inner {
   border: none !important;
 }
-._v5aaow:-moz-focusring {
+.btn-filter-rounded:-moz-focusring {
   outline: 0 !important;
 }
-._v5aaow:focus-visible {
+.btn-filter-rounded:focus-visible {
   -webkit-transition: box-shadow 0.2s !important;
   -moz-transition: box-shadow 0.2s !important;
   transition: box-shadow 0.2s !important;
   box-shadow: 0 0 0 2px #fff, 0 0 0 4px #222 !important;
 }
 @media (prefers-reduced-motion: reduce) {
-  ._v5aaow:focus-visible {
+  .btn-filter-rounded:focus-visible {
     -webkit-transition: none !important;
     -moz-transition: none !important;
     transition: none !important;
   }
 }
-._1xw9br6j {
+.explore-filter__icon {
   -ms-grid-row-align: center !important;
   -ms-flex-item-align: center !important;
   -webkit-align-self: center !important;
@@ -7397,7 +7397,7 @@ select[disabled] {
   padding-top: 4px !important;
   padding-bottom: 4px !important;
 }
-._2ickz8 {
+.explore-filter-flex-nowrap {
   display: -webkit-box !important;
   display: -moz-box !important;
   display: -ms-flexbox !important;
@@ -7408,14 +7408,14 @@ select[disabled] {
 ._1asxs4e {
   margin-top: 2px !important;
 }
-._18abn0r {
+.explore-filter__text {
   font-size: 14px !important;
   line-height: 18px !important;
   margin-left: 6px !important;
   display: none !important;
 }
 @media (min-width: 950px) {
-  ._18abn0r {
+  .explore-filter__text {
     display: initial !important;
   }
 }
@@ -7618,7 +7618,7 @@ select[disabled] {
   border-left: 1px solid #ddd !important;
   height: 36px !important;
 }
-._1ufanc5 {
+.explore-flex-relative {
   display: -webkit-box !important;
   display: -moz-box !important;
   display: -ms-flexbox !important;
@@ -7627,7 +7627,7 @@ select[disabled] {
   position: relative !important;
   min-width: 0 !important;
 }
-._gpbejf {
+.explore-filter__controls-next {
   position: absolute !important;
   left: 0 !important;
   z-index: 3 !important;
@@ -7673,7 +7673,7 @@ select[disabled] {
 ._1l1u7cl {
   scroll-snap-align: start !important;
 }
-._139d8hx {
+.explore-filter__controls-prev {
   -webkit-box-pack: end !important;
   -ms-flex-pack: end !important;
   position: absolute !important;
@@ -7703,13 +7703,13 @@ select[disabled] {
     rgba(255, 255, 255, 0) 94.47%
   ) !important;
 }
-._kmf45x {
+.explore-filter__controls-inline-block {
   display: inline-block !important;
   padding-right: 8px !important;
   padding-top: 4px !important;
   padding-bottom: 4px !important;
 }
-._6x132n {
+.explore-filter__controls-btn {
   -webkit-box-pack: center !important;
   -ms-flex-pack: center !important;
   -webkit-box-align: center !important;
@@ -7743,50 +7743,50 @@ select[disabled] {
   width: 36px !important;
   height: 36px !important;
 }
-._6x132n:disabled {
+.explore-filter__controls-btn:disabled {
   opacity: 0.5 !important;
   cursor: not-allowed !important;
   color: #ddd !important;
 }
-._6x132n:disabled::before {
+.explore-filter__controls-btn:disabled::before {
   background: 0 0 !important;
 }
 @media (prefers-reduced-motion: reduce) {
-  ._6x132n {
+  .explore-filter__controls-btn {
     -webkit-transition: none !important;
     -moz-transition: none !important;
     transition: none !important;
   }
 }
 @media (hover: hover) {
-  ._6x132n:hover {
+  .explore-filter__controls-btn:hover {
     color: #000 !important;
   }
-  ._6x132n:hover::before {
+  .explore-filter__controls-btn:hover::before {
     background: #f7f7f7 !important;
   }
 }
-._6x132n:active {
+.explore-filter__controls-btn:active {
   color: #000 !important;
   -webkit-transform: scale(0.92) !important;
   -ms-transform: scale(0.92) !important;
   transform: scale(0.92) !important;
 }
-._6x132n:active::before {
+.explore-filter__controls-btn:active::before {
   background: #f7f7f7 !important;
 }
-._6x132n::-moz-focus-inner {
+.explore-filter__controls-btn::-moz-focus-inner {
   border: none !important;
   padding: 0 !important;
   margin: 0 !important;
 }
-._6x132n:focus::-moz-focus-inner {
+.explore-filter__controls-btn:focus::-moz-focus-inner {
   border: none !important;
 }
-._6x132n:-moz-focusring {
+.explore-filter__controls-btn:-moz-focusring {
   outline: 0 !important;
 }
-._6x132n::before {
+.explore-filter__controls-btn::before {
   content: '' !important;
   display: block !important;
   position: absolute !important;
@@ -7831,7 +7831,7 @@ select[disabled] {
 ._1n9ev8k3:hover {
   color: #fff !important;
 }
-._1p981dl {
+.btn-filter-rounded-sm-secondary {
   cursor: pointer !important;
   text-align: center !important;
   border: #ddd !important;
@@ -7856,18 +7856,18 @@ select[disabled] {
   font-size: 12px !important;
   line-height: 16px !important;
 }
-._1p981dl:disabled {
+.btn-filter-rounded-sm-secondary:disabled {
   cursor: not-allowed !important;
   color: #ddd !important;
   border-color: #ebebeb !important;
 }
 @media (hover: hover) {
-  ._1p981dl:disabled:hover {
+  .btn-filter-rounded-sm-secondary:disabled:hover {
     color: #ddd !important;
     border-color: #ebebeb !important;
   }
 }
-._1p981dl:disabled:active {
+.btn-filter-rounded-sm-secondary:disabled:active {
   color: #ddd !important;
   border-color: #ebebeb !important;
   -webkit-transform: none !important;
@@ -7875,27 +7875,27 @@ select[disabled] {
   transform: none !important;
 }
 @media (hover: hover) {
-  ._1p981dl:hover {
+  .btn-filter-rounded-sm-secondary:hover {
     color: #000 !important;
     border-color: #000 !important;
   }
 }
-._1p981dl:active {
+.btn-filter-rounded-sm-secondary:active {
   color: #000 !important;
   border-color: #000 !important;
   -webkit-transform: scale(0.925) !important;
   -ms-transform: scale(0.925) !important;
   transform: scale(0.925) !important;
 }
-._1p981dl::-moz-focus-inner {
+.btn-filter-rounded-sm-secondary::-moz-focus-inner {
   border: none !important;
   padding: 0 !important;
   margin: 0 !important;
 }
-._1p981dl:focus::-moz-focus-inner {
+.btn-filter-rounded-sm-secondary:focus::-moz-focus-inner {
   border: none !important;
 }
-._1p981dl:-moz-focusring {
+.btn-filter-rounded-sm-secondary:-moz-focusring {
   outline: 0 !important;
 }
 ._f9e8qy {
@@ -8598,7 +8598,7 @@ select[disabled] {
   border-width: 2px !important;
   border-radius: inherit !important;
 }
-._15pf4i2 {
+.btn-filter-rounded-sm {
   cursor: pointer !important;
   text-align: center !important;
   border: 1px solid #ddd !important;
@@ -8624,18 +8624,18 @@ select[disabled] {
   font-size: 14px !important;
   line-height: 18px !important;
 }
-._15pf4i2:disabled {
+.btn-filter-rounded-sm:disabled {
   cursor: not-allowed !important;
   color: #ddd !important;
   border-color: #ebebeb !important;
 }
 @media (hover: hover) {
-  ._15pf4i2:disabled:hover {
+  .btn-filter-rounded-sm:disabled:hover {
     color: #ddd !important;
     border-color: #ebebeb !important;
   }
 }
-._15pf4i2:disabled:active {
+.btn-filter-rounded-sm:disabled:active {
   color: #ddd !important;
   border-color: #ebebeb !important;
   -webkit-transform: none !important;
@@ -8643,30 +8643,30 @@ select[disabled] {
   transform: none !important;
 }
 @media (hover: hover) {
-  ._15pf4i2:hover {
+  .btn-filter-rounded-sm:hover {
     color: #000 !important;
     border-color: #000 !important;
   }
 }
-._15pf4i2:active {
+.btn-filter-rounded-sm:active {
   color: #000 !important;
   border-color: #000 !important;
   -webkit-transform: scale(0.925) !important;
   -ms-transform: scale(0.925) !important;
   transform: scale(0.925) !important;
 }
-._15pf4i2::-moz-focus-inner {
+.btn-filter-rounded-sm::-moz-focus-inner {
   border: none !important;
   padding: 0 !important;
   margin: 0 !important;
 }
-._15pf4i2:focus::-moz-focus-inner {
+.btn-filter-rounded-sm:focus::-moz-focus-inner {
   border: none !important;
 }
-._15pf4i2:-moz-focusring {
+.btn-filter-rounded-sm:-moz-focusring {
   outline: 0 !important;
 }
-._1e69mqj {
+.explore-filter-flex-center {
   display: -webkit-box !important;
   display: -moz-box !important;
   display: -ms-flexbox !important;
@@ -9051,59 +9051,59 @@ select[disabled] {
     padding-right: max(80px, calc((100vw - 1600px) / 2)) !important;
   }
 }
-._15pf4i2:focus-visible {
+.btn-filter-rounded-sm:focus-visible {
   -webkit-transition: box-shadow 0.2s !important;
   -moz-transition: box-shadow 0.2s !important;
   transition: box-shadow 0.2s !important;
   box-shadow: 0 0 0 2px #fff, 0 0 0 4px #222 !important;
 }
 @media (prefers-reduced-motion: reduce) {
-  ._15pf4i2:focus-visible {
+  .btn-filter-rounded-sm:focus-visible {
     -webkit-transition: none !important;
     -moz-transition: none !important;
     transition: none !important;
   }
 }
-._6x132n:focus-visible {
+.explore-filter__controls-btn:focus-visible {
   outline: 0 !important;
   -webkit-transition: box-shadow 0.2s !important;
   -moz-transition: box-shadow 0.2s !important;
   transition: box-shadow 0.2s !important;
   box-shadow: none !important;
 }
-._6x132n:focus-visible::-moz-focus-inner {
+.explore-filter__controls-btn:focus-visible::-moz-focus-inner {
   border: none !important;
   padding: 0 !important;
   margin: 0 !important;
 }
-._6x132n:focus-visible:focus::-moz-focus-inner {
+.explore-filter__controls-btn:focus-visible:focus::-moz-focus-inner {
   border: none !important;
 }
-._6x132n:focus-visible:-moz-focusring {
+.explore-filter__controls-btn:focus-visible:-moz-focusring {
   outline: 0 !important;
 }
 @media (prefers-reduced-motion: reduce) {
-  ._6x132n:focus-visible {
+  .explore-filter__controls-btn:focus-visible {
     -webkit-transition: none !important;
     -moz-transition: none !important;
     transition: none !important;
   }
 }
-._6x132n:focus-visible::before {
+.explore-filter__controls-btn:focus-visible::before {
   box-shadow: 0 0 0 2px #222, 0 0 0 4px rgba(255, 255, 255, 0.8) !important;
   background: #f7f7f7 !important;
 }
 ._1n9ev8k3:focus-visible {
   color: #fff !important;
 }
-._1p981dl:focus-visible {
+.btn-filter-rounded-sm-secondary:focus-visible {
   -webkit-transition: box-shadow 0.2s !important;
   -moz-transition: box-shadow 0.2s !important;
   transition: box-shadow 0.2s !important;
   box-shadow: 0 0 0 2px #fff, 0 0 0 4px #222 !important;
 }
 @media (prefers-reduced-motion: reduce) {
-  ._1p981dl:focus-visible {
+  .btn-filter-rounded-sm-secondary:focus-visible {
     -webkit-transition: none !important;
     -moz-transition: none !important;
     transition: none !important;
@@ -43920,7 +43920,7 @@ tr.show-desktop {
   border-width: 2px !important;
   border-radius: inherit !important;
 }
-._15pf4i2 {
+.btn-filter-rounded-sm {
   cursor: pointer !important;
   text-align: center !important;
   border: 1px solid #ddd !important;
@@ -51734,7 +51734,7 @@ tr.show-desktop {
   line-height: 20px !important;
   padding: 6px 0 !important;
 }
-._w37zq5 {
+.explore-filter {
   font-weight: 400 !important;
   font-size: 14px !important;
   line-height: 18px !important;
