--- a/assets/css/pages.css
+++ b/assets/css/pages.css
@@ -17325,15 +17325,15 @@ h3:first-child {
     color: #484848 !important;
   }
 }
-._13cc5fty {
+.row-condensed {
   margin-left: -4px !important;
   margin-right: -4px !important;
 }
-._13cc5fty:before {
+.row-condensed:before {
   content: ' ' !important;
   display: table !important;
 }
-._13cc5fty:after {
+.row-condensed:after {
   content: ' ' !important;
   display: table !important;
   clear: both !important;
