--- a/assets/css/pages.css
+++ b/assets/css/pages.css
@@ -2126,7 +2126,7 @@
 ._y138ax {
   margin-top: 36px !important;
 }
-._zjunba {
+.flex-content-between {
   -webkit-box-pack: justify !important;
   -ms-flex-pack: justify !important;
   display: -webkit-box !important;
@@ -7374,7 +7374,7 @@ select[disabled] {
   -ms-flex-flow: wrap !important;
   flex-flow: wrap !important;
 }
-._t0tx82 {
+.flex-grow-1 {
   -webkit-box-flex: 1 !important;
   -ms-flex-positive: 1 !important;
   -webkit-flex-grow: 1 !important;
@@ -10569,7 +10569,7 @@ select[disabled] {
   min-width: 50px !important;
   margin-left: 12px !important;
 }
-._jro6t0 {
+.flex {
   display: -webkit-box !important;
   display: -moz-box !important;
   display: -ms-flexbox !important;
@@ -15283,7 +15283,7 @@ h3:first-child {
   padding-right: 24px !important;
   padding-bottom: 16px !important;
 }
-._5kaapu {
+.flex-items-center {
   -webkit-box-align: center !important;
   -ms-flex-align: -webkit-box !important;
   display: -webkit-box !important;
@@ -15368,7 +15368,7 @@ h3:first-child {
   content: '' !important;
   margin-top: var(--panel-layout-top-offset, 0) !important;
 }
-._t0tx82 {
+.flex-grow-1 {
   -webkit-box-flex: 1 !important;
   flex-grow: 1 !important;
 }
@@ -15745,7 +15745,7 @@ h3:first-child {
   border-radius: 12px !important;
   background-color: transparent !important;
 }
-._bc4egv {
+.flex-1 {
   flex: 1 1 0% !important;
 }
 ._x2h9fxk {
@@ -16189,7 +16189,7 @@ h3:first-child {
 ._bzfhend:hover {
   text-decoration: none !important;
 }
-._rqfxvmb {
+.flex-item {
   -ms-grid-row-align: center !important;
   -ms-flex-item-align: center !important;
   display: -webkit-inline-box !important;
@@ -17283,7 +17283,7 @@ h3:first-child {
   padding-top: 2px !important;
   padding-bottom: 2px !important;
 }
-._12d0llg5 {
+.flex-bar {
   -webkit-box-align: center !important;
   -ms-flex-align: center !important;
   -webkit-box-lines: multiple !important;
@@ -20054,7 +20054,7 @@ h3:first-child {
 ._7f3mm0 {
   background-color: #f7f7f7 !important;
 }
-._ojs7nk {
+.flex-1-auto {
   flex: 1 0 auto !important;
 }
 ._yy1t5kt {
@@ -21415,7 +21415,7 @@ h3:first-child {
     display: none !important;
   }
 }
-._1sv27e6 {
+.flex-content-center {
   -webkit-box-pack: center !important;
   display: flex !important;
   justify-content: center !important;
@@ -31287,7 +31287,7 @@ html :where(img[class*='wp-image-']) {
   padding-top: 24px !important;
   padding-bottom: 24px !important;
 }
-._12d0llg5 {
+.flex-bar {
   -webkit-box-align: center !important;
   text-align: justify !important;
   line-height: 0 !important;
@@ -31295,7 +31295,7 @@ html :where(img[class*='wp-image-']) {
   flex-wrap: wrap !important;
   align-items: center !important;
 }
-._qo24lwc {
+.flex-bar-item-grow {
   -webkit-box-flex: 1 !important;
   display: inline-block !important;
   vertical-align: middle !important;
@@ -32362,7 +32362,7 @@ tr.show-desktop {
 ._18gze56 {
   padding-top: 1px !important;
 }
-._rqfxvmb {
+.flex-item {
   display: inline-flex !important;
   align-self: center !important;
 }
@@ -37712,12 +37712,12 @@ tr.show-desktop {
   font-weight: 600 !important;
   font-size: 14px !important;
 }
-._fvfsqm {
+.flex-grow-0 {
   -webkit-flex: 0 !important;
   -ms-flex: 0 1 0% !important;
   flex: 0 !important;
 }
-._bc4egv {
+.flex-1 {
   -webkit-flex: 1 !important;
   -ms-flex: 1 1 0% !important;
   flex: 1 !important;
@@ -39451,20 +39451,20 @@ tr.show-desktop {
     transition: none !important;
   }
 }
-._12d0llg5 {
+.flex-bar {
   -webkit-box-align: center !important;
   -ms-flex-align: center !important;
   -webkit-box-lines: multiple !important;
   text-align: justify !important;
   line-height: 0 !important;
 }
-._12d0llg5::after {
+.flex-bar::after {
   content: '' !important;
   display: inline-block !important;
   vertical-align: top !important;
   width: 100% !important;
 }
-._qo24lwc {
+.flex-bar-item-grow {
   -webkit-box-flex: 1 !important;
   -ms-flex-positive: 1 !important;
   display: inline-block !important;
@@ -39473,7 +39473,7 @@ tr.show-desktop {
   -webkit-flex-grow: 1 !important;
   flex-grow: 1 !important;
 }
-._1iti0ju {
+.flex-bar-item {
   display: inline-block !important;
   vertical-align: middle !important;
 }
@@ -40990,7 +40990,7 @@ tr.show-desktop {
   margin-bottom: 0 !important;
   margin-top: 0 !important;
 }
-._1yq0zcs {
+.flex-items-center-content-between {
   -webkit-box-pack: justify !important;
   -ms-flex-pack: justify !important;
   -webkit-box-align: center !important;
@@ -41006,7 +41006,7 @@ tr.show-desktop {
   justify-content: space-between !important;
 }
 @media print {
-  ._1yq0zcs {
+  .flex-items-center-content-between {
     display: block !important;
   }
 }
@@ -44611,7 +44611,7 @@ tr.show-desktop {
   width: 30px !important;
   z-index: 1 !important;
 }
-._ojs7nk {
+.flex-1-auto {
   -webkit-flex: 1 0 auto !important;
   -ms-flex: 1 0 auto !important;
   flex: 1 0 auto !important;
@@ -44942,7 +44942,7 @@ tr.show-desktop {
 ._xh0r19 {
   margin-left: 32px !important;
 }
-._1sv27e6 {
+.flex-content-center {
   -webkit-box-pack: center !important;
   -ms-flex-pack: center !important;
   display: -webkit-box !important;
@@ -47279,7 +47279,7 @@ tr.show-desktop {
   margin-bottom: 0 !important;
   padding-bottom: 0 !important;
 }
-._1qbrhv4 {
+.flex-items-center-content-between {
   -webkit-box-pack: justify !important;
   -ms-flex-pack: justify !important;
   -webkit-box-align: center !important;
@@ -49773,7 +49773,7 @@ tr.show-desktop {
     display: inline !important;
   }
 }
-._5kaapu {
+.flex-items-center {
   -webkit-box-align: center !important;
   -ms-flex-align: center !important;
   display: -webkit-box !important;
@@ -52270,7 +52270,7 @@ tr.show-desktop {
   font-size: 16px !important;
   line-height: 20px !important;
 }
-._zjunba {
+.flex-content-between {
   -webkit-box-pack: justify !important;
   display: flex !important;
   justify-content: space-between !important;
@@ -55680,7 +55680,7 @@ a:hover {
 ._klarpw {
   margin-top: 8px !important;
 }
-._5kaapu {
+.flex-items-center {
   -webkit-box-align: center !important;
   display: flex !important;
   align-items: center !important;
