--- a/assets/css/pages.css
+++ b/assets/css/pages.css
@@ -10512,11 +10512,11 @@ select[disabled] {
     align-items: center !important;
   }
 }
-._upim4d {
+.contents {
   display: none !important;
 }
 @media (min-width: 744px) {
-  ._upim4d {
+  .contents {
     display: contents !important;
   }
 }
@@ -10601,11 +10601,11 @@ h3:first-child {
   margin-top: 0;
 }
 @media print {
-  ._upim4d {
+  .contents {
     display: contents !important;
   }
 }
-._upim4d {
+.contents {
   display: contents !important;
 }
 ._1pntom0 {
@@ -12116,7 +12116,7 @@ h3:first-child {
   animation-fill-mode: both !important;
   animation-name: keyframe_d37zz3 !important;
 }
-._y0r5kt {
+.contents {
   display: contents !important;
 }
 ._159z8rr {
@@ -52465,7 +52465,7 @@ textarea {
   font-weight: 600 !important;
   border-top: 1px solid #ddd !important;
 }
-._z4lmgp {
+.contents {
   display: contents !important;
 }
 ._1ucy1zjv {
