--- a/assets/css/pages.css
+++ b/assets/css/pages.css
@@ -1612,11 +1612,11 @@
   overflow-y: auto !important;
   -webkit-overflow-scrolling: touch !important;
 }
-._1lwbucx {
+.inline {
   display: inline !important;
 }
 @media (min-width: 744px) {
-  ._1lwbucx {
+  .inline {
     display: none !important;
   }
 }
@@ -1661,11 +1661,11 @@
   opacity: 0 !important;
   left: -10000px !important;
 }
-._1g8cjd8 {
+.inline {
   display: inline !important;
 }
 @media (min-width: 1128px) {
-  ._1g8cjd8 {
+  .inline {
     display: none !important;
   }
 }
@@ -21027,11 +21027,11 @@ h3:first-child {
     line-height: 20px !important;
   }
 }
-._t8y1n6 {
+.inline {
   display: inline !important;
 }
 @media (min-width: 744px) {
-  ._t8y1n6 {
+  .inline {
     display: block !important;
   }
 }
@@ -22812,10 +22812,10 @@ _qgvrjoy {
   margin: 0 !important;
   padding: 0 !important;
 }
-._15bwml3 {
+.inline-block {
   display: inline-block !important;
 }
-._15bwml3:before {
+.inline-block:before {
   display: none !important;
 }
 ._blc9xe {
@@ -28174,11 +28174,11 @@ html :where(img[class*='wp-image-']) {
     margin: 10px 16px !important;
   }
 }
-._1t3783v {
+.inline-block {
   display: inline-block !important;
 }
 @media (min-width: 1128px) {
-  ._1t3783v {
+  .inline-block {
     font-size: var(--iw-ehf-f) !important;
     line-height: var(---s-l-myu) !important;
     font-weight: var(--e-y-j-d-v-j) !important;
@@ -32060,11 +32060,11 @@ tr.show-desktop {
   position: relative !important;
   z-index: 5 !important;
 }
-._mo78s93 {
+.inline-block {
   display: inline-block !important;
 }
 @media (min-width: 1128px) {
-  ._mo78s93 {
+  .inline-block {
     display: none !important;
   }
 }
@@ -51351,7 +51351,7 @@ tr.show-desktop {
   display: inline-block !important;
   padding-right: 11px !important;
 }
-._36rlri {
+.inline-block {
   display: inline-block !important;
 }
 ._1n0bqws7 {
@@ -52850,7 +52850,7 @@ textarea {
 ._149pqlo {
   margin-right: 12px !important;
 }
-._g86r3e {
+.inline {
   display: inline !important;
 }
 ._1mm0shk {
