--- a/assets/css/pages.css
+++ b/assets/css/pages.css
@@ -3002,12 +3002,12 @@
   }
 }
 @media print {
-  ._1ynbv25 {
+  .block {
     display: block !important;
   }
 }
 @media (min-width: 744px) {
-  ._1ynbv25 {
+  .block {
     display: none !important;
   }
 }
@@ -32435,11 +32435,11 @@ tr.show-desktop {
     display: none !important;
   }
 }
-._nx67f0 {
+.block {
   display: block !important;
 }
 @media (min-width: 1128px) {
-  ._nx67f0 {
+  .block {
     display: none !important;
   }
 }
@@ -36558,7 +36558,7 @@ tr.show-desktop {
   ._10ejfg4u {
     visibility: visible;
   }
-  ._1ynbv25,
+  .block,
   .search-bar-xs {
     display: none;
   }
@@ -38404,11 +38404,11 @@ tr.show-desktop {
     display: none !important;
   }
 }
-._tgtm1b {
+.block {
   display: block !important;
 }
 @media (min-width: 1128px) {
-  ._tgtm1b {
+  .block {
     display: block !important;
   }
 }
@@ -48750,7 +48750,7 @@ tr.show-desktop {
 ._dkkqb8:focus[data-focus-visible-added] {
   box-shadow: 0 0 0 2px #000 !important;
 }
-._1ynbv25 {
+.block {
   display: block !important;
 }
 ._1pdnceg::before {
@@ -56268,7 +56268,7 @@ a:hover {
 
 @supports (grid-gap: 16px) {}
 
-.base-nav-card-link {
+.block {
   display: block !important;
 }
 
