--- a/src/css/pages.css
+++ b/src/css/pages.css
@@ -23521,7 +23521,7 @@ _qgvrjoy {
 ._s50zru {
   border-bottom: 1px solid #ebebeb !important;
 }
-._1rtgmd8y {
+.va-top-nowrap {
   display: table-cell !important;
   vertical-align: top !important;
   white-space: nowrap !important;
@@ -34289,7 +34289,7 @@ tr.show-desktop {
   height: 100% !important;
   vertical-align: middle !important;
 }
-._1u1cgx19 {
+.va-middle-vh {
   display: table-cell !important;
   height: 100% !important;
   vertical-align: middle !important;
@@ -51289,7 +51289,7 @@ tr.show-desktop {
     padding-left: var(--spacing-form-element-decorator, 11px) !important;
   }
 }
-._nncr1bm {
+.va-container-vv {
   display: table !important;
   position: relative !important;
   height: 100% !important;
@@ -51662,11 +51662,11 @@ tr.show-desktop {
     right: var(--spacing-select-arrow-margin-outside, 16px) !important;
   }
 }
-._1thk0tsb {
+.va-top {
   display: table-cell !important;
   vertical-align: top !important;
 }
-._n5lh69r {
+.va-top-h {
   display: table-cell !important;
   width: 100% !important;
   vertical-align: top !important;
