--- a/assets/css/pages.css
+++ b/assets/css/pages.css
@@ -51599,7 +51599,7 @@ tr.show-desktop {
     margin-bottom: var(--spacing-form-element-margin-bottom, 8px) !important;
   }
 }
-._y9ev9r {
+.overflow-hidden {
   overflow: hidden !important;
 }
 ._1w9nn735 {
