--- a/src/css/pages.css
+++ b/src/css/pages.css
@@ -23518,7 +23518,7 @@ _qgvrjoy {
   top: 50% !important;
   transform: translateY(-50%) !important;
 }
-._s50zru {
+.border-bottom-muted {
   border-bottom: 1px solid #ebebeb !important;
 }
 .va-top-nowrap {
