--- a/assets/css/pages.css
+++ b/assets/css/pages.css
@@ -49203,12 +49203,12 @@ tr.show-desktop {
   width: 100% !important;
   will-change: transform !important;
 }
-._e2l2kr {
+.video-display {
   display: block !important;
   height: 100% !important;
   width: 100% !important;
 }
-._e2l2kr::-webkit-media-text-track-display {
+.video-display::-webkit-media-text-track-display {
   top: 77.5% !important;
 }
 ._1l7cdtx {
