--- a/src/css/pages.css
+++ b/src/css/pages.css
@@ -18180,7 +18180,7 @@ h3:first-child {
   -webkit-align-items: center !important;
   align-items: center !important;
 }
-._ussrz76 {
+.display-image-wrapper {
   display: inline-block !important;
   vertical-align: bottom !important;
   min-height: 1px !important;
